--- a/index.html
+++ b/index.html
@@ -226,6 +226,10 @@
     <img src="Icons/IFRC-icons-colour_Food.png" alt="Aid Distribution" class="disaster-tab-icon">
     <span data-ar="توزيع المساعدات" data-en="Aid Distribution"></span>
   </button>
+  <button class="disaster-sub-tab-btn" data-disaster-tab="economic-security" data-ar="الأمن الاقتصادي" data-en="Economic Security">
+    <img src="Icons/IFRC-icons-colour_Food.png" alt="Economic Security" class="disaster-tab-icon">
+    <span data-ar="الأمن الاقتصادي وسبل العيش" data-en="Economic Security & Livelihoods"></span>
+  </button>
 </div>
 
 <!-- Flood Response Sub-Tab Content -->
@@ -399,6 +403,157 @@
 </tr>
 </thead>
 <tbody id="aidDistributionTableBody"></tbody>
+</table>
+</div>
+</div>
+</section>
+</div>
+<!-- Economic Security Sub-Tab Content -->
+<div class="disaster-tab-content" id="economic-security">
+<section class="economic-security-section">
+<div class="container">
+<h3 data-ar="الأمن الاقتصادي وسبل العيش" data-en="Economic Security and Livelihoods"></h3>
+<p>الأمن الاقتصادي وسبل العيش:
+- يمكن أن تتسبب الكوارث والأزمات بخسائر فادحة بالأمن الغذائي للناس وسبل عيشهم. وتزيد من ضعف الناس الاجتماعي والاقتصادي، وتؤثر على قدرتهم على التعافي والتعامل مع الصدمات والضغوط المستقبلية. لذلك يعمل الهلال الأحمر على محاولة التخفيف من وطأة ذلك على الاسر وذلك من خلال تقديم عدد من المشاريع:</p>
+<h4>1- تم دعم مشاريع تمكين سبل العيش لحوالي 40,095 أسرة 280,665 مستفيد.</h4>
+<h5>أ‌- أنشطة زراعية</h5>
+<div class="table-wrapper">
+<table class="projects-table economic-table">
+<thead>
+<tr>
+<th>النشاط</th>
+<th>المنطقة</th>
+<th>عدد الأسر المستهدفة</th>
+</tr>
+</thead>
+<tbody>
+<tr><td>تربية النحل</td><td>تعز-لحج - الضالع - أبين - البيضاء - حجة - عمران- الحديدة</td><td>6430</td></tr>
+<tr><td>توزيع شتلات البن</td><td>تعز- إب</td><td>990</td></tr>
+<tr><td>توزيع بذور الطماطم</td><td>مارب</td><td>200</td></tr>
+<tr><td>توزيع بذور القمح</td><td>مارب</td><td>250</td></tr>
+<tr><td>توزيع درنات البطاط</td><td>مارب</td><td>200</td></tr>
+<tr><td>توزيع شتلات التين</td><td>البيضاء</td><td>50</td></tr>
+<tr><td>توزيع شتلات الوردة الحمراء</td><td>تعز</td><td>1512</td></tr>
+<tr><td>توزيع أشجار مثمرة</td><td>أبين</td><td>50</td></tr>
+<tr><td>توزيع الأدوات والقسائم الإلكترونية لمزارعي البن</td><td>تعز</td><td>200</td></tr>
+<tr><td>الإجمالي</td><td></td><td>9,882</td></tr>
+</tbody>
+</table>
+</div>
+<h5>ب‌- مساعدات نقدية</h5>
+<h6>- تعزيز سبل العيش</h6>
+<div class="table-wrapper">
+<table class="projects-table economic-table">
+<thead>
+<tr>
+<th>المحافظة</th>
+<th>عدد الأسر المستفيدة</th>
+</tr>
+</thead>
+<tbody>
+<tr><td>تعز</td><td>16,090</td></tr>
+<tr><td>لحج</td><td>5,000</td></tr>
+<tr><td>صعدة</td><td>3,005</td></tr>
+<tr><td>الحديدة</td><td>2,100</td></tr>
+<tr><td>حجة</td><td>1,363</td></tr>
+<tr><td>عدن</td><td>1,504</td></tr>
+<tr><td>الإجمالي</td><td>29,062</td></tr>
+</tbody>
+</table>
+</div>
+<h6>- النقد مقابل العمل</h6>
+<div class="table-wrapper">
+<table class="projects-table economic-table">
+<thead>
+<tr>
+<th>المحافظة</th>
+<th>عدد الأسر المستفيدة</th>
+</tr>
+</thead>
+<tbody>
+<tr><td>محافظة الضالع– دمت</td><td>463</td></tr>
+</tbody>
+</table>
+</div>
+<h5>ج - مشاريع اقتصادية صغيرة</h5>
+<p>قدم الهلال الأحمر مساعدات للمشاريع الاقتصادية في المجتمعات المحلية استفاد منها 614 أسرة.</p>
+<h6>- (مشاريع مدرة للدخل)</h6>
+<div class="table-wrapper">
+<table class="projects-table economic-table">
+<thead>
+<tr>
+<th>المشروع</th>
+<th>المحافظة</th>
+<th>عدد الاسر المستفيدة</th>
+</tr>
+</thead>
+<tbody>
+<tr><td>مشاريع صغيرة</td><td>لحج</td><td>50</td></tr>
+<tr><td>مشروع الحدائق المنزلية</td><td>لحج</td><td>63</td></tr>
+<tr><td>مشاريع صغيرة</td><td>البيضاء</td><td>51</td></tr>
+<tr><td>توزيع 24 قارب صيد</td><td>حضرموت</td><td>220</td></tr>
+<tr><td></td><td>الحديدة</td><td>120</td></tr>
+<tr><td>الإجمالي</td><td></td><td>504</td></tr>
+</tbody>
+</table>
+</div>
+<h6>- التمكين الاقتصادي</h6>
+<div class="table-wrapper">
+<table class="projects-table economic-table">
+<thead>
+<tr>
+<th>المشروع</th>
+<th>المحافظة</th>
+<th>عدد الاسر المستفيدة</th>
+</tr>
+</thead>
+<tbody>
+<tr><td>مشروع الخياطة</td><td>عمران</td><td>110</td></tr>
+</tbody>
+</table>
+</div>
+<h5>د- بناء القدرات</h5>
+<p>قدم الهلال الأحمر تدريبات حول التمكين الاقتصادي وفي مجال الإغاثة الإنسانية لعدد 74 أسرة</p>
+<div class="table-wrapper">
+<table class="projects-table economic-table">
+<thead>
+<tr>
+<th>النشاط</th>
+<th>المحافظة</th>
+<th>عدد الأسر المستفيدة</th>
+</tr>
+</thead>
+<tbody>
+<tr><td>تدريب حول التمكين الاقتصادي- المشاريع الصغيرة</td><td>لحج</td><td>59</td></tr>
+<tr><td>تدريب في مجال الإغاثة الإنسانية وتوزيع المساعدات</td><td>لحج</td><td>15</td></tr>
+<tr><td>الإجمالي</td><td></td><td>74</td></tr>
+</tbody>
+</table>
+</div>
+<h4>2- توزيع السلال الغذائية:</h4>
+<p>ضمن مشروع الأمن الاقتصادي تم توزيع 14,620 سلة غذائية استفاد منها ما يقارب 102,340 شخص.</p>
+<div class="table-wrapper">
+<table class="projects-table economic-table">
+<thead>
+<tr>
+<th>المحافظة</th>
+<th>عدد الأسر المستفيدة</th>
+</tr>
+</thead>
+<tbody>
+<tr><td>البيضاء</td><td>1,048</td></tr>
+<tr><td>تعز</td><td>2,000</td></tr>
+<tr><td>المهرة</td><td>1,500</td></tr>
+<tr><td>ريمة</td><td>1,500</td></tr>
+<tr><td>لحج</td><td>2,038</td></tr>
+<tr><td>الحديدة</td><td>3,000</td></tr>
+<tr><td>عدن</td><td>1,300</td></tr>
+<tr><td>أبين</td><td>322</td></tr>
+<tr><td>الضالع</td><td>1,612</td></tr>
+<tr><td>أمانة العاصمة</td><td>100</td></tr>
+<tr><td>حضرموت</td><td>200</td></tr>
+<tr><td>الإجمالي</td><td>14,620</td></tr>
+</tbody>
 </table>
 </div>
 </div>
