--- a/index.html
+++ b/index.html
@@ -181,6 +181,134 @@
 </div>
 </div>
 </section>
+<section class="health-services-section">
+<div class="container">
+<h3 data-ar="خدمات المراكز الصحية" data-en="Health Center Services"></h3>
+<p>يقدم الهلال الأحمر اليمني خدماته الصحية في عدد من المحافظات اليمنية المختلفة عبر مراكزه الصحية او من خلال دعم وتشغيل مراكز صحية حكومية والتي تزايدت احتياجاتها بسبب الوضع الراهن للبلاد. تقدم هذه المراكز خدمات الرعاية الصحية الوقائية والعلاجية.</p>
+<p>حيث بلغ اجمالي عدد المستفيدين من خدمات المراكز الصحية 702,183 مستفيد في 17 محافظة يمنية.</p>
+<div class="table-wrapper">
+<table class="projects-table health-table">
+<thead>
+<tr>
+<th>المركز الصحي</th>
+<th>إب سمارة</th>
+<th>أبين</th>
+<th>حجة مبين</th>
+<th>شبوة</th>
+<th>حجة كحلان عفار</th>
+<th>لحج</th>
+<th>عمران المأخذ</th>
+<th>صنعاء صرف</th>
+<th>مأرب</th>
+<th>حجة عبس</th>
+<th>المحويت</th>
+<th>عدن</th>
+<th>صنعاء الأمانة</th>
+<th>إب المركز الصحي</th>
+<th>سيئون</th>
+<th>عمران المركز الاسعافي</th>
+<th>تعز البرح</th>
+<th>حجة المركز الاسعافي</th>
+<th>ذمار</th>
+<th>عمران الأمومة</th>
+<th>صعدة الرقة</th>
+<th>صنعاء المحافظة</th>
+<th>الإجمالي</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>عدد المستفيدين</td>
+<td>5,496</td>
+<td>30,639</td>
+<td>9,218</td>
+<td>23,061</td>
+<td>19,626</td>
+<td>17,875</td>
+<td>27,709</td>
+<td>14,251</td>
+<td>90,850</td>
+<td>34,986</td>
+<td>21,543</td>
+<td>27,239</td>
+<td>16,352</td>
+<td>29,294</td>
+<td>7,713</td>
+<td>44,750</td>
+<td>26,013</td>
+<td>81,318</td>
+<td>88,439</td>
+<td>56,417</td>
+<td>14,421</td>
+<td>14,973</td>
+<td>702,183</td>
+</tr>
+</tbody>
+</table>
+</div>
+<p>ولا تقتصر الخدمات التي تقدمها المراكز الصحية على الرعاية الصحية الأولية، بل تتعداها إلى الرعاية الصحية الثانوية والعمليات الجراحية. حيث كان إجمالي عدد الخدمات 1,284,780 خدمة.</p>
+<div class="table-wrapper">
+<table class="projects-table health-table">
+<thead>
+<tr>
+<th>المركز الصحي</th>
+<th>إب سمارة</th>
+<th>أبين</th>
+<th>حجة مبين</th>
+<th>شبوة</th>
+<th>حجة كحلان عفار</th>
+<th>لحج</th>
+<th>عمران المأخذ</th>
+<th>صنعاء صرف</th>
+<th>مأرب</th>
+<th>حجة عبس</th>
+<th>المحويت</th>
+<th>عدن</th>
+<th>صنعاء الأمانة</th>
+<th>إب المركز الصحي</th>
+<th>سيئون</th>
+<th>عمران المركز الاسعافي</th>
+<th>تعز البرح</th>
+<th>حجة المركز الاسعافي</th>
+<th>ذمار</th>
+<th>عمران الأمومة</th>
+<th>صعدة الرقة</th>
+<th>صنعاء المحافظة</th>
+<th>الإجمالي</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>عدد الخدمات</td>
+<td>13</td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+</section>
 </div>
 <div class="sub-tab-content" id="sub-development">
 <section class="hero-stats sector-impact">
