--- a/index.html
+++ b/index.html
@@ -191,58 +191,33 @@
 <thead>
 <tr>
 <th>المركز الصحي</th>
-<th>إب سمارة</th>
-<th>أبين</th>
-<th>حجة مبين</th>
-<th>شبوة</th>
-<th>حجة كحلان عفار</th>
-<th>لحج</th>
-<th>عمران المأخذ</th>
-<th>صنعاء صرف</th>
-<th>مأرب</th>
-<th>حجة عبس</th>
-<th>المحويت</th>
-<th>عدن</th>
-<th>صنعاء الأمانة</th>
-<th>إب المركز الصحي</th>
-<th>سيئون</th>
-<th>عمران المركز الاسعافي</th>
-<th>تعز البرح</th>
-<th>حجة المركز الاسعافي</th>
-<th>ذمار</th>
-<th>عمران الأمومة</th>
-<th>صعدة الرقة</th>
-<th>صنعاء المحافظة</th>
-<th>الإجمالي</th>
+<th>عدد المستفيدين</th>
 </tr>
 </thead>
 <tbody>
-<tr>
-<td>عدد المستفيدين</td>
-<td>5,496</td>
-<td>30,639</td>
-<td>9,218</td>
-<td>23,061</td>
-<td>19,626</td>
-<td>17,875</td>
-<td>27,709</td>
-<td>14,251</td>
-<td>90,850</td>
-<td>34,986</td>
-<td>21,543</td>
-<td>27,239</td>
-<td>16,352</td>
-<td>29,294</td>
-<td>7,713</td>
-<td>44,750</td>
-<td>26,013</td>
-<td>81,318</td>
-<td>88,439</td>
-<td>56,417</td>
-<td>14,421</td>
-<td>14,973</td>
-<td>702,183</td>
-</tr>
+<tr><td>إب سمارة</td><td>5,496</td></tr>
+<tr><td>أبين</td><td>30,639</td></tr>
+<tr><td>حجة مبين</td><td>9,218</td></tr>
+<tr><td>شبوة</td><td>23,061</td></tr>
+<tr><td>حجة كحلان عفار</td><td>19,626</td></tr>
+<tr><td>لحج</td><td>17,875</td></tr>
+<tr><td>عمران المأخذ</td><td>27,709</td></tr>
+<tr><td>صنعاء صرف</td><td>14,251</td></tr>
+<tr><td>مأرب</td><td>90,850</td></tr>
+<tr><td>حجة عبس</td><td>34,986</td></tr>
+<tr><td>المحويت</td><td>21,543</td></tr>
+<tr><td>عدن</td><td>27,239</td></tr>
+<tr><td>صنعاء الأمانة</td><td>16,352</td></tr>
+<tr><td>إب المركز الصحي</td><td>29,294</td></tr>
+<tr><td>سيئون</td><td>7,713</td></tr>
+<tr><td>عمران المركز الاسعافي</td><td>44,750</td></tr>
+<tr><td>تعز البرح</td><td>26,013</td></tr>
+<tr><td>حجة المركز الاسعافي</td><td>81,318</td></tr>
+<tr><td>ذمار</td><td>88,439</td></tr>
+<tr><td>عمران الأمومة</td><td>56,417</td></tr>
+<tr><td>صعدة الرقة</td><td>14,421</td></tr>
+<tr><td>صنعاء المحافظة</td><td>14,973</td></tr>
+<tr><td>الإجمالي</td><td>702,183</td></tr>
 </tbody>
 </table>
 </div>
@@ -252,58 +227,33 @@
 <thead>
 <tr>
 <th>المركز الصحي</th>
-<th>إب سمارة</th>
-<th>أبين</th>
-<th>حجة مبين</th>
-<th>شبوة</th>
-<th>حجة كحلان عفار</th>
-<th>لحج</th>
-<th>عمران المأخذ</th>
-<th>صنعاء صرف</th>
-<th>مأرب</th>
-<th>حجة عبس</th>
-<th>المحويت</th>
-<th>عدن</th>
-<th>صنعاء الأمانة</th>
-<th>إب المركز الصحي</th>
-<th>سيئون</th>
-<th>عمران المركز الاسعافي</th>
-<th>تعز البرح</th>
-<th>حجة المركز الاسعافي</th>
-<th>ذمار</th>
-<th>عمران الأمومة</th>
-<th>صعدة الرقة</th>
-<th>صنعاء المحافظة</th>
-<th>الإجمالي</th>
+<th>عدد الخدمات</th>
 </tr>
 </thead>
 <tbody>
-<tr>
-<td>عدد الخدمات</td>
-<td>13</td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
+<tr><td>إب سمارة</td><td>13</td></tr>
+<tr><td>أبين</td><td></td></tr>
+<tr><td>حجة مبين</td><td></td></tr>
+<tr><td>شبوة</td><td></td></tr>
+<tr><td>حجة كحلان عفار</td><td></td></tr>
+<tr><td>لحج</td><td></td></tr>
+<tr><td>عمران المأخذ</td><td></td></tr>
+<tr><td>صنعاء صرف</td><td></td></tr>
+<tr><td>مأرب</td><td></td></tr>
+<tr><td>حجة عبس</td><td></td></tr>
+<tr><td>المحويت</td><td></td></tr>
+<tr><td>عدن</td><td></td></tr>
+<tr><td>صنعاء الأمانة</td><td></td></tr>
+<tr><td>إب المركز الصحي</td><td></td></tr>
+<tr><td>سيئون</td><td></td></tr>
+<tr><td>عمران المركز الاسعافي</td><td></td></tr>
+<tr><td>تعز البرح</td><td></td></tr>
+<tr><td>حجة المركز الاسعافي</td><td></td></tr>
+<tr><td>ذمار</td><td></td></tr>
+<tr><td>عمران الأمومة</td><td></td></tr>
+<tr><td>صعدة الرقة</td><td></td></tr>
+<tr><td>صنعاء المحافظة</td><td></td></tr>
+<tr><td>الإجمالي</td><td></td></tr>
 </tbody>
 </table>
 </div>
