الرعاية الصحية الأولية

--- a/index.html
+++ b/index.html
@@ -222,38 +222,34 @@
 </table>
 </div>
 <p>ولا تقتصر الخدمات التي تقدمها المراكز الصحية على الرعاية الصحية الأولية، بل تتعداها إلى الرعاية الصحية الثانوية والعمليات الجراحية. حيث كان إجمالي عدد الخدمات 1,284,780 خدمة.</p>
+<h4>خدمات الرعاية الصحية الأولية:</h4>
 <div class="table-wrapper">
 <table class="projects-table health-table">
 <thead>
 <tr>
-<th>المركز الصحي</th>
+<th>الخدمة</th>
 <th>عدد الخدمات</th>
 </tr>
 </thead>
 <tbody>
-<tr><td>إب سمارة</td><td>13</td></tr>
-<tr><td>أبين</td><td></td></tr>
-<tr><td>حجة مبين</td><td></td></tr>
-<tr><td>شبوة</td><td></td></tr>
-<tr><td>حجة كحلان عفار</td><td></td></tr>
-<tr><td>لحج</td><td></td></tr>
-<tr><td>عمران المأخذ</td><td></td></tr>
-<tr><td>صنعاء صرف</td><td></td></tr>
-<tr><td>مأرب</td><td></td></tr>
-<tr><td>حجة عبس</td><td></td></tr>
-<tr><td>المحويت</td><td></td></tr>
-<tr><td>عدن</td><td></td></tr>
-<tr><td>صنعاء الأمانة</td><td></td></tr>
-<tr><td>إب المركز الصحي</td><td></td></tr>
-<tr><td>سيئون</td><td></td></tr>
-<tr><td>عمران المركز الاسعافي</td><td></td></tr>
-<tr><td>تعز البرح</td><td></td></tr>
-<tr><td>حجة المركز الاسعافي</td><td></td></tr>
-<tr><td>ذمار</td><td></td></tr>
-<tr><td>عمران الأمومة</td><td></td></tr>
-<tr><td>صعدة الرقة</td><td></td></tr>
-<tr><td>صنعاء المحافظة</td><td></td></tr>
-<tr><td>الإجمالي</td><td></td></tr>
+<tr><td>الطبيب العام</td><td>188,338</td></tr>
+<tr><td>عيادة النسائية</td><td>76,749</td></tr>
+<tr><td>عيادة الأطفال</td><td>12,518</td></tr>
+<tr><td>عيادة الجراحة العامة</td><td>705</td></tr>
+<tr><td>عيادة أنف أذن وحنجرة</td><td>3,318</td></tr>
+<tr><td>عيادة الأسنان</td><td>3,605</td></tr>
+<tr><td>عيادة طبيب الباطنية</td><td>15,763</td></tr>
+<tr><td>قسم الحضانة</td><td>6,707</td></tr>
+<tr><td>الرقود</td><td>2,291</td></tr>
+<tr><td>الأدوية</td><td>260,883</td></tr>
+<tr><td>الأشعة العادية</td><td>14,952</td></tr>
+<tr><td>أشعة التلفزيون</td><td>62,958</td></tr>
+<tr><td>جهاز دوبلر</td><td>5,578</td></tr>
+<tr><td>تخطيط القلب</td><td>3,189</td></tr>
+<tr><td>أجهزة أخرى</td><td>2,380</td></tr>
+<tr><td>المجارحة وضرب الأبر</td><td>213,513</td></tr>
+<tr><td>المختبر</td><td>150,206</td></tr>
+<tr><td><strong>الإجمالي</strong></td><td><strong>1,023,653</strong></td></tr>
 </tbody>
 </table>
 </div>
