sub tabs for health

--- a/index.html
+++ b/index.html
@@ -181,10 +181,38 @@
 </div>
 </div>
 </section>
+
+<!-- Health Sub-Tabs -->
+<div class="health-sub-tabs">
+  <button class="health-sub-tab-btn active" data-health-tab="health-overview" data-ar="نظرة عامة" data-en="Overview">
+    <img src="Icons/IFRC-icons-colour_Emergency-health-stethoscope.png" alt="Overview" class="health-tab-icon">
+    <span data-ar="نظرة عامة" data-en="Overview"></span>
+  </button>
+  <button class="health-sub-tab-btn" data-health-tab="health-centers" data-ar="المراكز الصحية" data-en="Health Centers">
+    <img src="Icons/IFRC-icons-colour_Emergency-health-stethoscope.png" alt="Health Centers" class="health-tab-icon">
+    <span data-ar="المراكز الصحية" data-en="Health Centers"></span>
+  </button>
+  <button class="health-sub-tab-btn" data-health-tab="primary-care" data-ar="الرعاية الأولية" data-en="Primary Care">
+    <img src="Icons/IFRC-icons-colour_Emergency-health-stethoscope.png" alt="Primary Care" class="health-tab-icon">
+    <span data-ar="الرعاية الأولية" data-en="Primary Care"></span>
+  </button>
+</div>
+
+<!-- Health Overview Sub-Tab Content -->
+<div class="health-tab-content active" id="health-overview">
 <section class="health-services-section">
 <div class="container">
 <h3 data-ar="خدمات المراكز الصحية" data-en="Health Center Services"></h3>
 <p>يقدم الهلال الأحمر اليمني خدماته الصحية في عدد من المحافظات اليمنية المختلفة عبر مراكزه الصحية او من خلال دعم وتشغيل مراكز صحية حكومية والتي تزايدت احتياجاتها بسبب الوضع الراهن للبلاد. تقدم هذه المراكز خدمات الرعاية الصحية الوقائية والعلاجية.</p>
+</div>
+</section>
+</div>
+
+<!-- Health Centers Sub-Tab Content -->
+<div class="health-tab-content" id="health-centers">
+<section class="health-centers-section">
+<div class="container">
+<h3 data-ar="المستفيدون من المراكز الصحية" data-en="Health Center Beneficiaries"></h3>
 <p>حيث بلغ اجمالي عدد المستفيدين من خدمات المراكز الصحية 702,183 مستفيد في 17 محافظة يمنية.</p>
 <div class="table-wrapper">
 <table class="projects-table health-table">
@@ -221,8 +249,16 @@
 </tbody>
 </table>
 </div>
+</div>
+</section>
+</div>
+
+<!-- Primary Care Sub-Tab Content -->
+<div class="health-tab-content" id="primary-care">
+<section class="primary-care-section">
+<div class="container">
+<h3 data-ar="خدمات الرعاية الصحية الأولية" data-en="Primary Health Care Services"></h3>
 <p>ولا تقتصر الخدمات التي تقدمها المراكز الصحية على الرعاية الصحية الأولية، بل تتعداها إلى الرعاية الصحية الثانوية والعمليات الجراحية. حيث كان إجمالي عدد الخدمات 1,284,780 خدمة.</p>
-<h4>خدمات الرعاية الصحية الأولية:</h4>
 <div class="table-wrapper">
 <table class="projects-table health-table">
 <thead>
@@ -255,6 +291,7 @@
 </div>
 </div>
 </section>
+</div>
 </div>
 <div class="sub-tab-content" id="sub-development">
 <section class="hero-stats sector-impact">
