Health Data Update

--- a/index.html
+++ b/index.html
@@ -289,6 +289,81 @@
 </tbody>
 </table>
 </div>
+
+<h4>الخدمات التخصصية:</h4>
+<div class="table-wrapper">
+<table class="projects-table health-table">
+<thead>
+<tr>
+<th>العمليات القيصرية أولى</th>
+<th>العمليات القيصرية مكررة</th>
+<th>الولادة المنزلية</th>
+<th>الولادة داخل المركز</th>
+<th>إجراءات أخرى أثناء القيصرية</th>
+</tr>
+</thead>
+<tbody>
+<tr><td>535</td><td>872</td><td>665</td><td>4239</td><td>228</td></tr>
+</tbody>
+</table>
+</div>
+
+<h4>الطوارئ التوليدية:</h4>
+<ul>
+<li>خدمات أخرى تقدمها المراكز الصحية:</li>
+</ul>
+<div class="table-wrapper">
+<table class="projects-table health-table">
+<thead>
+<tr>
+<th>الخدمات</th>
+<th>التثقيف الصحي</th>
+<th>استقبال حالات الأمراض المعدية</th>
+<th>استقبال حالات الأمراض غير المعدية</th>
+<th>استقبال حالات الحوادث(طرقات)</th>
+<th>حوادث أخرى</th>
+<th>الرعاية التكاملية</th>
+<th>الدعم النفسي</th>
+<th>التغذية</th>
+<th>التحصين الموسع</th>
+<th>الصحة الانجابية</th>
+<th>تنظيم الاسرة</th>
+</tr>
+<tr>
+<th>العدد</th>
+<th>74914</th>
+<th>133798</th>
+<th>70829</th>
+<th>2922</th>
+<th>9354</th>
+<th>11112</th>
+<th>9815</th>
+<th>50062</th>
+<th>37649</th>
+<th>44538</th>
+<th>21894</th>
+</tr>
+</thead>
+</table>
+</div>
+
+<h4>ثالثاً: الرعاية الصحية الثانوية:</h4>
+<ul>
+<li>العمليات والحالات الجراحية:</li>
+</ul>
+<div class="table-wrapper">
+<table class="projects-table health-table">
+<thead>
+<tr>
+<th>المركز الصحي</th>
+<th>العمليات</th>
+</tr>
+</thead>
+<tbody>
+<tr><td>حجة، ذمار</td><td>605</td></tr>
+</tbody>
+</table>
+</div>
 </div>
 </section>
 </div>
