update new data in Health

--- a/index.html
+++ b/index.html
@@ -196,6 +196,10 @@
     <img src="Icons/IFRC-icons-colour_Emergency-health-stethoscope.png" alt="Primary Care" class="health-tab-icon">
     <span data-ar="الرعاية الأولية" data-en="Primary Care"></span>
   </button>
+  <button class="health-sub-tab-btn" data-health-tab="health-strengthening" data-ar="تعزيز الرعاية الصحية" data-en="Strengthening Health Care">
+    <img src="Icons/IFRC-icons-colour_Emergency-health-stethoscope.png" alt="Strengthening Health Care" class="health-tab-icon">
+    <span data-ar="تعزيز الرعاية الصحية" data-en="Strengthening Health Care"></span>
+  </button>
 </div>
 
 <!-- Health Overview Sub-Tab Content -->
@@ -316,34 +320,23 @@
 <table class="projects-table health-table">
 <thead>
 <tr>
-<th>الخدمات</th>
-<th>التثقيف الصحي</th>
-<th>استقبال حالات الأمراض المعدية</th>
-<th>استقبال حالات الأمراض غير المعدية</th>
-<th>استقبال حالات الحوادث(طرقات)</th>
-<th>حوادث أخرى</th>
-<th>الرعاية التكاملية</th>
-<th>الدعم النفسي</th>
-<th>التغذية</th>
-<th>التحصين الموسع</th>
-<th>الصحة الانجابية</th>
-<th>تنظيم الاسرة</th>
-</tr>
-<tr>
+<th>الخدمة</th>
 <th>العدد</th>
-<th>74914</th>
-<th>133798</th>
-<th>70829</th>
-<th>2922</th>
-<th>9354</th>
-<th>11112</th>
-<th>9815</th>
-<th>50062</th>
-<th>37649</th>
-<th>44538</th>
-<th>21894</th>
 </tr>
 </thead>
+<tbody>
+<tr><td>التثقيف الصحي</td><td>74914</td></tr>
+<tr><td>استقبال حالات الأمراض المعدية</td><td>133798</td></tr>
+<tr><td>استقبال حالات الأمراض غير المعدية</td><td>70829</td></tr>
+<tr><td>استقبال حالات الحوادث(طرقات)</td><td>2922</td></tr>
+<tr><td>حوادث أخرى</td><td>9354</td></tr>
+<tr><td>الرعاية التكاملية</td><td>11112</td></tr>
+<tr><td>الدعم النفسي</td><td>9815</td></tr>
+<tr><td>التغذية</td><td>50062</td></tr>
+<tr><td>التحصين الموسع</td><td>37649</td></tr>
+<tr><td>الصحة الانجابية</td><td>44538</td></tr>
+<tr><td>تنظيم الاسرة</td><td>21894</td></tr>
+</tbody>
 </table>
 </div>
 
@@ -367,7 +360,41 @@
 </div>
 </section>
 </div>
+<!-- Strengthening Health Care Sub-Tab Content -->
+<div class="health-tab-content" id="health-strengthening">
+<section class="strengthening-section">
+<div class="container">
+<h3 data-ar="تعزيز الرعاية الصحية" data-en="Strengthening Health Care"></h3>
+<h4>1- المستشفى الميداني والعيادات المتنقلة</h4>
+<p>يهدف المستشفى الميداني لتقديم الخدمات الطبيبة الضرورية للمجتمعات الفقيرة والتي تخفف من معاناة المواطنين وتعزز التوعية الصحة لديهم لعدم تواجد الخدمات الصحية في تلك المناطق وكان المستفيدين من الخدمات بحسب الجدول الآتي:</p>
+<div class="table-wrapper">
+<table class="projects-table health-table">
+<thead>
+<tr>
+<th>العيادة المتنقلة</th>
+<th>عدد المستفيدين</th>
+<th>عدد الخدمات</th>
+</tr>
+</thead>
+<tbody>
+<tr><td>شبوة</td><td>11,791</td><td>23,940</td></tr>
+<tr><td>أمانة العاصمة</td><td>8,271</td><td>8,627</td></tr>
+<tr><td>تعز- البرح</td><td>30,995</td><td>54,206</td></tr>
+<tr><td>المحويت</td><td>3,116</td><td>7,342</td></tr>
+<tr><td>حجة</td><td>7,787</td><td>14,106</td></tr>
+<tr><td>الحديدة</td><td>4,209</td><td>8,194</td></tr>
+<tr><td>الإجمالي</td><td>66,169</td><td>116,415</td></tr>
+</tbody>
+</table>
 </div>
+<p>تشارك العيادات المتنقلة في تقديم الخدمات الطبية في المناسبات الجماهيرية حيث تقدم الاستشارات الطبية والعلاجات وعمل الفحوصات الضرورية والأساسية للمرضى.</p>
+<h4>2- دعم المستشفيات والمراكز الصحية بالمعدات / الأجهزة/ المستلزمات الطبية والأدوية:</h4>
+<ul>
+<li>إهداء الادوية والمستلزمات الطبية للجهات التالية: مركز الصماد، مستشفى 48 النموذجي، مستشفى ضلاع همدان، مركز كحلان عفار الاسعافي، مركز صعدة، الخدمات الطبية العسكرية، مصلحة الدفاع المدني، مركز سمارة الإسعافي، مستشفى فلسطين، السجن الحربي ويقدر عدد المستفيدين: 16,377 مستفيد</li>
+</ul>
+</div>
+</section>
+</div></div>
 <div class="sub-tab-content" id="sub-development">
 <section class="hero-stats sector-impact">
 <div class="container">
